polychem/src/polymers/snapshots/polychem__polymers__polymer_database__tests__parse_bond_with_duplicate_to.snap
---
source: polychem/src/polymers/polymer_database.rs
description: bonds
expression: out
---
  × error parsing KDL

Error:   × duplicate node `to`, single node expected
   ╭─[test:3:5]
 2 │     to "Hydroxyl" at="Reducing End"
 3 │     to "Hydroxyl" at="Nonreducing End"
   ·     ─┬
   ·      ╰── unexpected node
 4 │ }
   ╰────
