polychem/src/polymers/snapshots/polychem__polymers__polymer_database__tests__parse_bond_with_missing_from.snap
---
source: polychem/src/polymers/polymer_database.rs
description: bonds
expression: out
---
  × error parsing KDL

Error:   × child node `from` is required
   ╭─[test:1:1]
 1 │ ╭─▶ Glycosidic {
 2 │ │       to "Hydroxyl" at="Nonreducing End"
 3 │ ├─▶ }
   · ╰──── node starts here
   ╰────

