polychem/src/polymers/snapshots/polychem__polymers__polymer_database__tests__parse_bond_with_nonexistent_from.snap
---
source: polychem/src/polymers/polymer_database.rs
description: bonds
expression: out
---
  × failed to validate polymer database file
  ╰─▶   × the specifier "Hydroxyl" at="Sidechain" cannot target any currently
        │ defined residues
        help: double-check for typos, or add new residues / groups that are
              targeted by this specifier
      
   ╭─[test:2:5]
 1 │ Glycosidic {
 2 │     from "Hydroxyl" at="Sidechain"
   ·     ───────────────┬───────────────
   ·                    ╰── targets nothing
 3 │     to "Hydroxyl" at="Nonreducing End"
 4 │ }
   ╰────
