polychem/src/polymers/snapshots/polychem__polymers__polymer_database__tests__parse_complete_residues_error.snap
---
source: polychem/src/polymers/polymer_database.rs
description: db.map_err(WrapErr)
expression: out
---
  × encountered an error during testing
  ╰─▶   × the residue type "SuperAminoAcid" is undefined
        help: double-check for typos, or add "SuperAminoAcid" to the types
      section
      
    ╭─[test:24:5]
 23 │         }
 24 │ ╭─▶     SuperAminoAcid "E" "Glutamic Acid" {
 25 │ │           composition "C5H9NO4"
 26 │ │           functional-group "Carboxyl" at="Sidechain"
 27 │ ├─▶     }
    · ╰──── undefined residue type
 28 │     }
    ╰────

